[gd_scene load_steps=7 format=3 uid="uid://brp443tcuuwe1"]

[ext_resource type="Script" path="res://Menus/pause_menu.gd" id="1_neobe"]
[ext_resource type="Shader" path="res://Menus/pause_menu.gdshader" id="2_6gpnr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jf6mr"]
shader = ExtResource("2_6gpnr")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_l7eex"]
resource_name = "Blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 0.964, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paused Panel:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paused Panel:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Paused Panel:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Paused Panel:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_mt7ta"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Paused Panel:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Paused Panel:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Paused Panel:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Paused Panel:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q47dc"]
_data = {
"Blur": SubResource("Animation_l7eex"),
"RESET": SubResource("Animation_mt7ta")
}

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_neobe")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jf6mr")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Paused Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.006
anchor_right = 0.212
anchor_bottom = 1.0
offset_top = -3.888
offset_right = -0.224014
metadata/_edit_lock_ = true

[node name="Paused" type="Label" parent="Paused Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.984
anchor_bottom = 0.148
offset_right = 3.90399
offset_bottom = 4.096
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
text_direction = 1

[node name="Quit" type="Button" parent="Paused Panel"]
process_mode = 3
layout_mode = 2
offset_left = 32.0
offset_top = 556.0
offset_right = 212.0
offset_bottom = 627.0
text = "Quit"

[node name="Unpause" type="Button" parent="Paused Panel"]
process_mode = 3
layout_mode = 0
offset_left = 32.0
offset_top = 372.0
offset_right = 212.0
offset_bottom = 443.0
text = "Unpause"

[node name="Restart" type="Button" parent="Paused Panel"]
process_mode = 3
layout_mode = 0
offset_left = 32.0
offset_top = 464.0
offset_right = 212.0
offset_bottom = 535.0
text = "Restart"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q47dc")
}

[connection signal="pressed" from="Paused Panel/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Paused Panel/Unpause" to="." method="_on_unpause_pressed"]
[connection signal="pressed" from="Paused Panel/Restart" to="." method="_on_restart_pressed"]
